--- a/FotografPaylasmaUygulamasi/Base.lproj/Main.storyboard
+++ b/FotografPaylasmaUygulamasi/Base.lproj/Main.storyboard
@@ -195,7 +195,7 @@
         <!--Tab Bar Controller-->
         <scene sceneID="Z7F-Do-pgB">
             <objects>
-                <tabBarController id="UGt-Yv-Lwv" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="tabBar" id="UGt-Yv-Lwv" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="6fO-5E-7Rp"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="HEd-OU-ELt">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="49"/>
